--- a/牛客刷题题目/前端校招面试题目合集.md
+++ b/牛客刷题题目/前端校招面试题目合集.md
@@ -8212,3 +8212,871 @@ window.devicePixelRatio=物理像素 /CSS像素
 
 ------
 
+#### 11.14 移动端适配方案
+
+**参考答案：**
+
+适配思路
+
+设计稿（750*1334） ---> 开发 ---> 适配不同的手机屏幕，使其显得合理
+
+原则
+
+1. 开发时方便，写代码时设置的值要和标注的 160px 相关
+2. 方案要适配大多数手机屏幕，并且无 BUG
+3. 用户体验要好，页面看着没有不适感
+
+思路
+
+1. 写页面时，按照设计稿写固定宽度，最后再统一缩放处理，在不同手机上都能用
+2. 按照设计稿的标准开发页面，在手机上部分内容根据屏幕宽度等比缩放，部分内容按需要变化，需要缩放的元素使用 rem, vw 相对单位，不需要缩放的使用 px
+3. 固定尺寸+弹性布局，不需要缩放
+
+**viewport 适配**
+
+根据设计稿标准（750px 宽度）开发页面，写完后页面及元素自动缩小，适配 375 宽度的屏幕
+
+在 head 里设置如下代码
+
+```html
+<meta name="viewport" content="width=750,initial-scale=0.5">
+```
+
+initial-scale = 屏幕的宽度 / 设计稿的宽度
+
+为了适配其他屏幕，需要动态的设置 initial-scale 的值
+
+```html
+<head>
+  <script>
+    const WIDTH = 750
+    const mobileAdapter = () => {
+      let scale = screen.width / WIDTH
+      let content = `width=${WIDTH}, initial-scale=${scale}, maximum-scale=${scale}, minimum-scale=${scale}`
+      let meta = document.querySelector('meta[name=viewport]')
+      if (!meta) {
+        meta = document.createElement('meta')
+        meta.setAttribute('name', 'viewport')
+        document.head.appendChild(meta)
+      }
+      meta.setAttribute('content',content)
+    }
+    mobileAdapter()
+    window.onorientationchange = mobileAdapter //屏幕翻转时再次执行
+  </script>
+</head>
+
+```
+
+缺点就是边线问题，不同尺寸下，边线的粗细是不一样的（等比缩放后），全部元素都是等比缩放，实际显示效果可能不太好
+
+**vw 适配（部分等比缩放）**
+
+1. 开发者拿到设计稿（假设设计稿尺寸为750px，设计稿的元素标注是基于此宽度标注）
+2. 开始开发，对设计稿的标注进行转换，把px换成vw。比如页面元素字体标注的大小是32px，换成vw为 (100/750)*32 vw
+3. 对于需要等比缩放的元素，CSS使用转换后的单位
+4. 对于不需要缩放的元素，比如边框阴影，使用固定单位px
+
+关于换算，为了开发方便，利用自定义属性，CSS变量
+
+```html
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
+  <script>
+    const WIDTH = 750
+    //:root { --width: 0.133333 } 1像素等于多少 vw
+    document.documentElement.style.setProperty('--width', (100 / WIDTH)) 
+  </script>
+</head>
+
+```
+
+注意此时，meta 里就不要去设置缩放了
+
+业务代码里就可以写
+
+```css
+header {
+  font-size: calc(28vw * var(--width))
+}
+```
+
+实现了按需缩放
+
+**rem 适配**
+
+1. 开发者拿到设计稿（假设设计稿尺寸为750px，设计稿的元素标是基于此宽度标注）
+2. 开始开发，对设计稿的标注进行转换
+3. 对于需要等比缩放的元素，CSS使用转换后的单位
+4. 对于不需要缩放的元素，比如边框阴影，使用固定单位px
+
+假设设计稿的某个字体大小是 40px, 手机屏幕上的字体大小应为 420/750*40 = 22.4px (体验好)，换算成 rem（相对于 html 根节点，假设 html 的 font-size = 100px,）则这个字体大小为 0.224 rem
+
+写样式时，对应的字体设置为 0.224 rem 即可，其他元素尺寸也做换算...
+
+但是有问题
+
+举个 ，设计稿的标注 是40px，写页面时还得去做计算，很麻烦（全部都要计算）
+
+能不能规定一下，看到 40px ,就应该写 40/100 = 0.4 rem,这样看到就知道写多少了（不用计算），此时的 html 的 font-size 就不能是 100px 了，应该为 (420*100)/750 = 56px，100为我们要规定的那个参数
+
+根据不同屏幕宽度，设置 html 的 font-size 值
+
+```html
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1">
+  <script>
+    const WIDTH = 750 //设计稿尺寸
+    const setView = () => {
+      document.documentElement.style.fontSize = (100 * screen.width / WIDTH) + 'px'
+    }
+    window.onorientationchange = setView
+    setView()
+  </script>
+</head>
+```
+
+对于需要等比缩放的元素，CSS使用转换后的单位
+
+```css
+header {
+  font-size: .28rem;
+}
+```
+
+对于不需要缩放的元素，比如边框阴影，使用固定单位px
+
+```css
+header > span.active {
+  color: #fff;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.3);
+}
+```
+
+假设 html 的 font size = 1px 的话，就可以写 28 rem 了，更方便了，但是浏览器对字体大小有限制，设为 1px 的话，在浏览器中是失效的，会以 12px（或者其他值） 做一个计算 , 就会得到一个很夸张的结果，所以可以把 html 写的大一些
+
+使用 sass 库时
+
+JS 处理还是一样的，但看着好看些
+
+```css
+@function px2rem($px) {
+  @return $px * 1rem / 100;
+}
+
+header {
+  font-size: px2rem(28);
+}
+```
+
+以上的三种适配方案，都是等比缩放，放到 ipad 上时（设计稿以手机屏幕设计的），页面元素会很大很丑，有些场景下，并不需要页面整体缩放（viewport 自动处理的也很好了），所以有时只需要合理的布局即可。
+
+**弹性盒适配（合理布局）**
+
+```html
+<meta name="viewport" content="width=device-width">
+```
+
+使用 flex 布局
+
+```css
+section {
+  display: flex;
+}
+```
+
+总结一下，什么样的页面需要做适配（等比缩放）呢
+
+- 页面中的布局是栅格化的
+
+换了屏幕后，到底有多宽多高很难去做设置，整体的都需要改变，所以需要整体的缩放
+
+- 头屏大图，宽度自适应，高度固定的话，对于不同的屏幕，形状就会发生改变（放到ipad上就变成长条了），宽度变化后，高度也要保持等比例变化
+
+以上所有的适配都是宽度的适配，但是在某些场景下，也会出现高度的适配
+
+比如大屏，需要适配很多的电视尺寸，要求撑满屏幕，不能有滚动条，此时若换个屏幕
+
+此时需要考虑小元素用 vh, 宽和高都用 vh 去表示，中间的大块去自适应，这就做到了大屏的适配，屏幕变小了，整体变小了（体验更好），中间这块撑满了屏幕
+
+对于更复杂的场景，需要更灵活考虑，没有一种适配方式可以囊括所有场景。
+
+
+
+---
+
+## 属性
+
+---
+
+#### 12.1 清除浮动
+
+**参考答案**：
+
+除浮动其实叫做**闭合浮动**更合适，因为是把浮动的元素圈起来，**让父元素闭合出口和入口不让他们出来影响其他的元素**。
+在CSS中，clear属性用于清除浮动，其基本语法格式如下：
+
+```css
+选择器{clear:属性值;}
+/*属性值为left,清除左侧浮动的影响
+  属性值为right,清除右侧浮动的影响
+  属性值为both,同时清除左右两侧浮动的影响*/
+```
+
+1. **额外标签法**
+
+   1.1 末尾标签法
+   通过在浮动元素的末尾添加一个空的标签。这是W3C推荐的做法，虽然比较简单，但是添加了无意义的标 签，结构化比较差，所以不推荐使用。下面三种写法都适用：
+
+   ```css
+   1. <div style="clear:both"></div>
+   2. .clear { clear:both }
+       <div class="clear"></div>
+   
+   3. .clear{ clear:both }
+       <br class="clear" />    <!--也可以使用br等别的块级元素来清除浮动-->
+   ```
+
+   2.2 内部标签法，把div放进父盒子里，盒子会撑开，一般也不会用。
+
+2. **overflow**
+
+   给父级元素添加overflow样式方法。
+   代码比较简洁，可以通过触发BFC方式，但是因为本身overflow的本质是溢出隐藏的效果，所以有的时候也会有一些问题存在，比如内容增多的时候不会自动换行导致内容被隐藏掉，无法显示出要溢出的元素。
+
+   ```css
+   .father {
+           overflow: auto;  
+         /* 加上这句话，就可以清除浮动   overflow = hidden|auto|scroll 都可以实现*/
+      }
+   ```
+
+   
+
+3. **伪元素法**（最常用）
+
+   3.1 使用after伪元素清除浮动
+   after是在父元素中加一个盒子，这个元素是通过css添加上去的，符合闭合浮动思想，结构语义化正确。
+   父元素中加一个类名为clearfix 。但是这个方法IE6，7不识别，要进行兼容，使用zoom:1触发 hasLayout来清除浮动
+   代表网站：百度、淘宝、网易等
+
+   ```css
+   .clearfix:after{
+       content:".";  /*尽量不要为空，一般写一个点*/
+       height:0;     /*盒子高度为0，看不见*/
+       display:block;    /*插入伪元素是行内元素，要转化为块级元素*/
+       visibility:hidden;      /*content有内容，将元素隐藏*/
+       clear:both;  
+   }
+   
+   .clearfix {
+       *zoom: 1;   /*  *只有IE6,7识别 */
+   }
+   ```
+
+   3.2 after伪元素空余字符法
+   父元素中加一个类名为clearfix，也需要兼容IE6、7
+
+   ```css
+   .clearfix::after{
+       content:"\200B";   /* content:'\0200'; 也可以 */
+       display:block;
+       height:0;
+       clear:both;
+   }
+   
+   .clearfix {
+       *zoom: 1; 
+   }
+   ```
+
+   3.3 使用before和after双伪元素清除浮动（推荐）
+   **完全符合闭合浮动思想的方法**。
+   父元素中加一个类名为clearfix,需要兼容IE6、7
+   代表网站：小米、腾讯
+
+   ```css
+    .clearfix:before, .clearfix:after {
+           content: ""; 
+           display: table;
+       }
+       .clearfix:after {
+           clear: both;
+       }
+       .clearfix {
+           *zoom: 1;
+       }
+   ```
+
+   ---
+
+#### 12.2 padding , margin 百分比单位依据
+
+   **参考答案**：
+
+   在CSS 盒模型中，依据CSS2.2文档，margin与padding的百分比指定值时，一律参考**包含盒的宽度**。
+   示例：
+
+   ```css
+           .father{
+               height: 100px;
+               width: 200px;
+               border: solid;
+           }
+   
+           .son{
+               margin: 20%;
+               padding: 20%;
+               width: 50%;
+               height: 50%;
+           }
+   ```
+
+   如下图，包括padding-top/bottom,margin-top/bottom在内，所有padding和margin均是参考的包含块的宽度，故它们的值为200px * 20% = 40px。
+
+---
+
+#### 12.3 父子边距重合
+
+**参考答案**：
+
+**效果：**
+
+**边界重叠**是指两个或多个盒子(可能相邻也可能嵌套)的相邻边界(其间没有任何非空内容、补白、边框)重合在一起而形成一个单一边界。
+
+父子元素的边界重叠
+
+```html
+<style>
+  .parent {
+    background: #e7a1c5;
+  }
+  .parent .child {
+    background: #c8cdf5;
+    height: 100px;
+    margin-top: 10px;
+  }
+</style>
+<section class="parent">
+  <article class="child"></article>
+</section>
+```
+
+在这里父元素的高度不是 110px，而是 100px，在这里**发生了高度坍塌**。
+
+**产生原因：**
+
+是如果块元素的margin-top与它的第一个子元素的margin-top之间没有border、padding、inlinecontent、clearance来分隔，或者块元素的 margin-bottom 与它的最后一个子元素的 margin-bottom 之间没有border、padding、inlinecontent、height、min-height、max-height分隔，那么外边距会塌陷。**子元素多余的外边距会被父元素的外边距截断。**
+
+**解决办法**：
+
+父子元素的边界重叠得解决方案： 在父元素上加上 overflow:hidden;**使其成为 BFC。**
+
+```css
+  .parent {
+    background: #e7a1c5;
+    overflow: hidden;
+  }
+  .parent .child {
+    background: #c8cdf5;
+    height: 100px;
+    margin-top: 10px;
+  }
+```
+
+
+
+---
+
+#### 12.4 css字体大小设置（三种）.em rem px
+
+**参考答案**：
+
+**px（绝对长度单位）**
+
+相信对于前端来说px这个单位是大家并不陌生，px这个单位，兼容性可以说是相当可以，大家对px的了解肯 定是没有很大的问题的。
+
+**em（相对长度单位）**
+
+**使用：**
+
+1. 浏览器的默认字体都是16px，那么1em=16px，以此类推计算12px=0.75em，10px=0.625em,2em=32px；
+
+2. 这样使用很复杂，很难很好的与px进行对应,也导致书写、使用、视觉的复杂(0.75em、0.625em全是小数点)；
+
+3. 为了简化font-size的换算，我们在body中写入一下代码
+
+   ```css
+   body {font-size: 62.5%;  } /*  公式16px*62.5%=10px  */ 
+   ```
+
+   这样页面中1em=10px,1.2em=12px,1.4em=14px,1.6em=16px，使得视觉、使用、书写都得到了极大的帮助。
+
+   例子如下：
+
+   ```html
+   <div class="font1" style='font-size:1.6em'>我是1.6em</div>
+   ```
+
+   缺点：
+
+   1. em的值并不是固定的；
+
+   2. em会继承父级元素的字体大小（参考物是父元素的font-size；）；
+
+   3. em中所有的字体都是相对于父元素的大小决定的；所以如果一个设置了font-size:1.2em的元素在另一个设置了font-size:1.2em的元素里，而这个元素又在另一个设置了font-size:1.2em的元素里，那么最后计算的结果是1.2X1.2X1.2=1.728em
+
+      ```html
+      <!DOCTYPE html>
+      <html>
+      <head>
+          <meta charset="utf-8" />
+          <title>测试</title>
+      <style type="text/css">
+        body {font-size: 62.5%; } /*  公式:16px*62.5%=10px  */ 
+          .big{font-size: 1.2em}
+          .small{font-size: 1.2em}
+      </style>
+      </head>
+      <body>
+      <div class="big">
+          我是大字体
+         <div class="small">我是小字体</div>
+      </div>
+      
+      </body>
+      </html>
+      
+      ```
+
+      但运行结果small的字体大小为：1.2em*1.2em=1.44em
+
+**rem（相对长度单位）**
+
+**使用：**
+
+1. 浏览器的默认字体都是16px，那么1rem=16px，以此类推计算12px=0.75rem，10px=0.625rem，2rem=32px；
+
+2. 这样使用很复杂，很难很好的与px进行对应,也导致书写、使用、视觉的复杂(0.75rem、0.625em全是小数点) ；
+
+3. 为了简化font-size的换算，我们在根元素html中加入font-size: 62.5%;
+
+   ```css
+   html {font-size: 62.5%;  } /*  公式16px*62.5%=10px  */  
+   ```
+
+   这样页面中1rem=10px,1.2rem=12px,1.4rem=14px,1.6rem=16px;使得视觉、使用、书写都得到了极大的帮助；
+
+   ```html
+   <div class="font1" style='font-size:1.6rem'>我是1.6rem=16px</div>
+   ```
+
+   特点：
+
+1. rem单位可谓集相对大小和绝对大小的优点于一身
+
+2. 和em不同的是**rem总是相对于根元素**(如:root{})，而不像em一样使用级联的方式来计算尺寸。这种相对单位使用起来更简单。
+
+3. rem支持IE9及以上，意思是相对于根元素html（网页），不会像em那样，依赖于父元素的字体大小，而造成混乱。使用起来安全了很多。
+
+   ```html
+   <!DOCTYPE html>
+   <html>
+   <head>
+       <meta charset="utf-8" />
+       <title>测试</title>
+   <style type="text/css">
+     html {font-size: 62.5%; } /*  公式:16px*62.5%=10px  */ 
+       .big{font-size: 1.4rem}
+       .small{font-size: 1.2rem}
+   </style>
+   </head>
+   <body>
+   <div class="big">
+       我是14px=1.4rem
+       <div class="small">我是12px=1.2rem</div>
+   </div>
+   
+   </body>
+   </html>
+   
+   ```
+
+   **注意：**
+
+- 值得注意的浏览器支持问题： IE8，Safari 4或 iOS 3.2中不支持rem单位。
+- 如果你的用户群都使用最新版的浏览器，那推荐使用rem，如果要考虑兼容性，那就使用px,或者两者同时使用。
+
+---
+
+#### 12.5 css3新特性
+
+通过 CSS3 转换，我们能够对元素进行**移动、缩放、转动、拉长或拉伸**，转换是使元素改变形状、尺寸和位置的一种效果。
+
+通过 CSS3可以创建动画，这些动画可以取代网页中的画图片、Flash 动画以及 JavaScript。
+
+CSS3 中通过@keyframes 规则来创建动画。在 @keyframes 中规定某项 CSS 样式，就能创建由当前样式（动画开始前的样式）逐渐改为新样式（需要变到的样式）的动画效果。
+
+通过 CSS3够创建多个列来对文本进行布局，就像我们经常看到的报纸的布局一样。
+
+1. CSS3 用户界面
+
+**CSS3 resize**
+
+在 CSS3中resize属性设置是否可由用户调整元素尺寸。
+
+```css
+/* 设置div可以由用户调整大小 */
+div{
+  resize:both;
+  overflow:auto;
+}
+
+```
+
+**CSS3 box-sizing**
+
+box-sizing属性允许您以确切的方式定义适应某个区域的具体内容。边框计算在width中
+
+```css
+/* 规定两个并排的带边框方框 */
+div{
+  box-sizing:border-box;
+  -moz-box-sizing:border-box;        /* Firefox */
+  -webkit-box-sizing:border-box;     /* Safari */
+  width:50%;
+  float:left;
+}
+
+```
+
+**CSS3 outline-offset**
+
+outline-offset属性对轮廓进行偏移，并在超出边框边缘的位置绘制轮廓。
+
+轮廓与边框有两点不同：
+
+> - 轮廓不占用空间；
+> - 轮廓可能是非矩形；
+
+```css
+/* 规定边框边缘之外 15 像素处的轮廓 */
+  div{
+    margin: 30px;
+    border: 2px solid black;
+    outline: 2px solid red;
+    outline-offset: 15px;
+    width: 200px;
+    height: 200px;
+  }
+```
+
+---
+
+#### 12.6 css：inline-block 的 div 之间的空隙，原因及解决
+
+**参考答案**：
+
+display:inline-block布局的元素在chrome下会出现几像素的间隙，原因是因为我们在编辑器里写代码的时候，同级别的标签不写在同一 行以保持代码的整齐可读性，即inline-block布局的元素在编辑器里不在同一行，**即存在换行符**，因此这就是著名的inline-block“**换行 符/空格间隙问题**”。如果inline-block元素间有空格或是换行产生了间隙，那是正常的，应该的。如果没有空格与间隙才是不正常的（**IE6/7** block水平元素）。
+
+**解决方法：**
+
+1、把img标签的display属性改成block：
+
+```css
+img{dispaly:block;}
+```
+
+2、把div中的字体大小设为0：
+
+```css
+div{font-size:0;}
+```
+
+3、如果是img，修改img的vertical-align属性：
+
+```css
+img{vertical-align:bottom;}
+img{vertical-align:middle;}
+img{vertical-align:top;}
+```
+
+4、移除标签间的空格
+
+```html
+<ul>
+    <li>这是一个li</li><li>这是另一个li</li><li>这是另另一个li</li><li>这是另另另一个li</li>
+</ul>
+
+// 方式二：在标签结束处消除换行符
+<ul>
+    <li>这是一个li
+    </li><li>这是另一个li
+    </li><li>这是另另一个li
+    </li><li>这是另另另一个li</li>
+</ul>
+
+// 方式三：HTML注释标签
+<ul>
+    <li>这是一个li</li><!--
+    --><li>这是另一个li</li><!--
+    --><li>这是另另一个li</li><!--
+    --><li>这是另另另一个li</li>
+</ul>
+```
+
+---
+
+# webAPI
+
+------
+
+#### 13.1 window.open
+
+**参考答案：**
+
+这个方法是用来打开新窗口的
+
+1. 最基本的弹出窗口
+
+   ```js
+   window.open('page.html');
+   ```
+
+2. 经过设置后的弹出窗口
+
+   ```js
+    window.open('page.html', 'newwindow', 'height=100, width=400, top=0, left=0, toolbar=no, menubar=no, scrollbars=no, resizable=no, location=no, status=no')   
+      //该句写成一行代码
+      //参数解释：
+      // window.open 弹出新窗口的命令； 
+   　　//'page.html' 弹出窗口的文件名； 
+   　　//'newwindow' 弹出窗口的名字（不是文件名），非必须，可用空''代替； 
+   　　//height=100 窗口高度； 
+   　　//width=400 窗口宽度； 
+   　　//top=0 窗口距离屏幕上方的象素值； 
+   　　//left=0 窗口距离屏幕左侧的象素值； 
+   　　//toolbar=no 是否显示工具栏，yes为显示； 
+   　　//menubar，scrollbars 表示菜单栏和滚动栏。 
+   　　//resizable=no 是否允许改变窗口大小，yes为允许； 
+   　　//location=no 是否显示地址栏，yes为允许； 
+   　　//status=no 是否显示状态栏内的信息（通常是文件已经打开），yes为允许
+   ```
+
+   
+
+3. 用函数控制弹出窗口
+
+   ```html
+    <html> 
+   　　<head> 
+   　　<script LANGUAGE="JavaScript"> 
+   　　<!-- 
+   　　function openwin() { 
+   　　window.open ("page.html", "newwindow", "height=100, width=400, toolbar =no, menubar=no, scrollbars=no, resizable=no, location=no, status=no") //写成一行
+   　　} 
+   　　//--> 
+   　　</script> 
+   　　</head> 
+   　　<body οnlοad="openwin()"> 
+   　　任意的页面内容... 
+   　　</body> 
+   　　</html> 
+   ```
+
+   解释：这里定义了一个函数openwin(), 函数内容就是打开一个窗口。在调用它之前没有任何用途。怎么调用呢？ 
+
+   方法一：<body οnlοad="openwin()"> 浏览器读页面时弹出窗口； 
+
+   方法二：<body οnunlοad="openwin()"> 浏览器离开页面时弹出窗口； 
+
+   方法三：用一个连接调用： <a href="#" οnclick="openwin()"> 打开一个窗口 注意：使用的"#"是虚连接。 
+
+   方法四：用一个按扭调用： <input type="button" οnclick="openwin()" value="打开窗口" />
+
+4. 弹出两个窗口
+
+   ```html
+   <script LANGUAGE="JavaScript"> 
+   　　<!-- 
+   　　function openwin() { 
+   　　window.open ("page.html", "newwindow", "height=100, width=100, top=0, left=0,toolbar=no, menubar=no, scrollbars=no, resizable=no, location=n o, status=no")//写成一行 
+   　　window.open ("page2.html", "newwindow2", "height=100, width=100, top=100, left=100,toolbar=no, menubar=no, scrollbars=no, resizable=no, loca tion=no, status=no")//写成一行 
+   　　} 
+   　　//--> 
+   </script>
+   ```
+
+   为避免弹出的2个窗口覆盖，用top和left控制一下弹出的位置不要相互覆盖即可。最后用上面的说过的四种方法调用即可。 注意：2个窗口的name(newwindow与 newwindow2)不要相同，或者干脆全部为空。
+
+5. 主窗口打开文件1.htm，同时弹出小窗口page.html
+
+   ```js
+    function openwin(){
+        window.open("page.html","","width=200,height=200") 
+    } 
+   ```
+
+   ```html
+      //加入body区：
+    <a href="1.htm" οnclick="openwin()">open</a>即可。
+   ```
+
+6. 弹出的窗口之定时关闭控制
+
+   将一小段代码加入弹出的页面（注意是加入page.html的HTML中，可不是主页面中，否则......），让它在10秒后自动关闭
+
+   ```js
+    function closeit(){
+       setTimeout("selft.close()", 10000)   //毫秒
+    }
+   ```
+
+   ```html
+   <body οnlοad="closeit()">
+   ```
+
+7. 在弹出窗口中加上一个关闭按扭
+
+   ```html
+   <input type="button" value="关闭" οnclick="window.close()">
+   ```
+
+   
+
+8. 内包含的弹出窗口---一个页面两个窗口
+
+   上面的例子都包含两个窗口，一个是主窗口，另一个是弹出的小窗口。通过下面的例子，你可以在一个页面内完成上面的效果
+
+   ```html
+   <html> 
+   　　<head> 
+   　　<SCRIPT LANGUAGE="JavaScript"> 
+   　　function openwin() 
+   　　{ 
+   　　OpenWindow=window.open("", "newwin", "height=250, width=250,toolbar=no ,scrollbars="+scroll+",menubar=no"); 
+   　　//写成一行 
+   　　OpenWindow.document.write("<TITLE>例子</TITLE>") 
+   　　OpenWindow.document.write("<BODY BGCOLOR=#ffffff>") 
+   　　OpenWindow.document.write("<h1>Hello!</h1>") 
+   　　OpenWindow.document.write("New window opened!") 
+   　　OpenWindow.document.write("</BODY>") 
+   　　OpenWindow.document.write("</HTML>") 
+   　　OpenWindow.document.close() 
+   　　} 
+   　　</SCRIPT> 
+   　　</head> 
+   　　<body> 
+   　　<a href="#" οnclick="openwin()">打开一个窗口</a> 
+   　　<input type="button" οnclick="openwin()" value="打开窗口"> 
+   　　</body> 
+   　　</html> 
+   
+   ```
+
+   
+
+9. 终极应用---弹出的窗口这Cookie控制
+
+   ```js
+    function openwin(){ 
+   　　window.open("page.html","","width=200,height=200") 
+    } 
+    function get_cookie(Name){
+       var search=Name+"=";
+       var returnvalue="";
+       if(document.cookie.length>0){
+   　　    if (offset != -1) { 
+   　　      offset += search.length 
+   　　      end = document.cookie.indexOf(";", offset); 
+   　　      if (end == -1) 
+   　　       end = document.cookie.length; 
+   　　        returnvalue=unescape(document.cookie.substring(offset, end));
+             }
+        }
+        return returnvalue;
+    }
+    function ladpopup(){
+       if(get_cookie('popped=yes')){
+         openwin()
+         document.cookie="popped=yes";
+       }
+   }
+   
+   ```
+
+   ```html
+   <body οnlοad="loadpopup()">
+   ```
+
+   ---
+
+   
+
+#### 13.2 实现 Eventemitter 类，有on、emit、off 方法
+
+**参考答案：**
+
+1. on(event,fn)：监听event事件，事件触发时调用fn函数；
+2. once(event,fn)：为指定事件注册一个单次监听器，单次监听器最多只触发一次，触发后立即解除监听器；
+3. emit(event,arg1,arg2,arg3...)：触发event事件，并把参数arg1,arg2,arg3....传给事件处理函数；
+4. off(event,fn)：停止监听某个事件
+
+```js
+class EventEmitter{
+    constructor(){
+        this._events={};
+    }
+    on(event,callback){  //监听event事件，触发时调用callback函数
+        let callbacks=this._events[event] || [];
+        callbacks.push(callback);
+        return this;
+    }
+    off(event,callback){  //停止监听event事件
+        let callbacks=this._events[event];
+        this._events[event]=callbacks && callbacks.filter(fn=>fn!==callback);
+        return this;
+    }
+    emit(...args){  //触发事件，并把参数传给事件的处理函数
+        const event=args[0];
+        const params=[].slice.call(args,1);
+        const callbacks=this._events[event];
+        callbacks.forEach(fn=>fn.apply(this.params));
+        return this;
+    }
+    once(event,callback){  //为事件注册单次监听器
+        let wrapFanc=(...args)=>{
+            callback.apply(this.args);
+            this.off(event,wrapFanc);
+        }
+        this.on(event,wrapFanc);
+        return this;
+    }
+}
+```
+
+------
+
+#### 13.3 查找给定的两个节点的第一个公共父节点
+
+**参考答案**：
+
+**解题思路**
+
+递归循环树的节点，因二叉树不能重复的特性,当前节点为 p or q ，返回当前节点 父节点循环中，如果找到一个，则查找其他子树 其他子树没有找到另外一个，就证明当前节点为找到的子树是最近公共祖先 两个都找到了，对应当前节点是两个节点的父节点这种情况，则返回当前节点。 代码
+
+```js
+var lowestCommonAncestor = function(root, p, q) {
+if (!root || root === p || root === q) return root
+    let left = lowestCommonAncestor(root.left, p, q)
+    let right = lowestCommonAncestor(root.right, p, q)
+    if (!left) return right
+    if (!right) return left
+    return root
+};
+```
+
+-----
+
+
+
