--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -10025,6 +10025,65 @@ let groupSize = 10;
 console.log(isNStraightHand(hand,groupSize));
 ```
 
+## 868. 二进制间距
+
+给定一个正整数 n，找到并返回 n 的二进制表示中两个 相邻 1 之间的 最长距离 。如果不存在两个相邻的 1，返回 0 。
+
+如果只有 0 将两个 1 分隔开（可能不存在 0 ），则认为这两个 1 彼此 相邻 。两个 1 之间的距离是它们的二进制表示中位置的绝对差。例如，"1001" 中的两个 1 的距离为 3 。
+
+```js
+/**
+ * @param {number} n
+ * @return {number}
+ */
+var binaryGap = function(n) {
+    n=n.toString(2);
+    let ans=0;
+    let count=0;
+    let flag=false;
+    for (let i=0;i<n.length;i++){
+        if (n[i]==="1") {
+            if (n[i-1]==="1") {
+                ans=Math.max(1,ans);
+            }else{
+                if (count>1) {
+                    ans=Math.max(ans,count);
+                }
+            }
+            count=1;
+        }else if (n[i]==="0") {
+            if (count>0) {
+                count++;
+            }
+        }
+    }
+    return ans;
+};
+
+let test=22;
+let result=binaryGap(test);
+console.log(result);
+```
+
+```js
+var binaryGap = function(n) {
+    let last = -1, ans = 0;
+    for (let i = 0; n != 0; ++i) {
+        if ((n & 1) === 1) {
+            if (last !== -1) {
+                ans = Math.max(ans, i - last);
+            }
+            last = i;
+        }
+        n >>= 1;
+    }
+    return ans;
+};
+
+```
+
+
+
 ## 913. 猫和老鼠
 
 两位玩家分别扮演猫和老鼠，在一张 无向 图上进行游戏，两人轮流行动。
