--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -7106,7 +7106,8 @@ let result=validUtf8(data);
 console.log(result);
 ```
 
-396. 旋转函数
+## 396. 旋转函数
+
 给定一个长度为 n 的整数数组 nums 。
 
 假设 arrk 是数组 nums 顺时针旋转 k 个位置后的数组，我们定义 nums 的 旋转函数  F 为：
@@ -7169,6 +7170,70 @@ var maxRotateFunction = function(nums) {
     }
     return maxSum;
 };
+```
+
+## 398. 随机数索引
+
+给你一个可能含有 重复元素 的整数数组 nums ，请你随机输出给定的目标数字 target 的索引。你可以假设给定的数字一定存在于数组中。
+
+实现 Solution 类：
+
+Solution(int[] nums) 用数组 nums 初始化对象。
+int pick(int target) 从 nums 中选出一个满足 nums[i] == target 的随机索引 i 。如果存在多个有效的索引，则每个索引的返回概率应当相等。
+
+哈希表
+
+```js
+/**
+ * @param {number[]} nums
+ */
+var Solution = function(nums) {
+    this.pos = new Map();
+    for (let i = 0; i < nums.length; ++i) {
+        if (!this.pos.has(nums[i])) {
+            this.pos.set(nums[i], []);
+        }
+        
+        this.pos.get(nums[i]).push(i);
+    }
+};
+
+/** 
+ * @param {number} target
+ * @return {number}
+ */
+Solution.prototype.pick = function(target) {
+    const indices = this.pos.get(target);
+    return indices[Math.floor(Math.random() * indices.length)];
+};
+
+/**
+ * Your Solution object will be instantiated and called as such:
+ * var obj = new Solution(nums)
+ * var param_1 = obj.pick(target)
+ */
+```
+
+水塘抽样
+
+```js
+var Solution = function(nums) {
+    this.nums = nums;
+};
+
+Solution.prototype.pick = function(target) {
+    let ans = 0;
+    for (let i = 0, cnt = 0; i < this.nums.length; ++i) {
+        if (this.nums[i] == target) {
+            ++cnt; // 第 cnt 次遇到 target
+            if (Math.floor(Math.random() * cnt) === 0) {
+                ans = i;
+            }
+        }
+    }
+    return ans;
+};
+
 ```
 
 
