--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -10090,6 +10090,56 @@ let groupSize = 10;
 console.log(isNStraightHand(hand,groupSize));
 ```
 
+## 883. 三维形体投影面积
+
+在 n x n 的网格 grid 中，我们放置了一些与 x，y，z 三轴对齐的 1 x 1 x 1 立方体。
+
+每个值 v = grid[i][j] 表示 v 个正方体叠放在单元格 (i, j) 上。
+
+现在，我们查看这些立方体在 xy 、yz 和 zx 平面上的投影。
+
+投影 就像影子，将 三维 形体映射到一个 二维 平面上。从顶部、前面和侧面看立方体时，我们会看到“影子”。
+
+返回 所有三个投影的总面积 。
+
+提示：
+
+n == grid.length == grid[i].length
+1 <= n <= 50
+0 <= grid[i][j] <= 50
+
+```js
+/**
+ * @param {number[][]} grid
+ * @return {number}
+ */
+var projectionArea = function(grid) {
+    let n=grid.length;
+    let sumXY=0;
+    let sumXZ=new Array(n).fill(0);
+    let sumYZ=new Array(n).fill(0);
+    for (let i=0;i<n;i++){
+        for (let j=0;j<n;j++){
+            if (grid[i][j]>0) {
+                sumXY+=1;
+                sumXZ[i]=Math.max(sumXZ[i],grid[i][j]);
+                sumYZ[j]=Math.max(sumYZ[j],grid[i][j]);
+            }
+        }
+    }
+    for (let i=0;i<n;i++){
+        sumXY+=sumXZ[i]+sumYZ[i];
+    }
+    return sumXY;
+};
+
+let grid=[[1,2],[3,4]];
+let result=projectionArea(grid);
+console.log(result);
+```
+
+
+
 ## 868. 二进制间距
 
 给定一个正整数 n，找到并返回 n 的二进制表示中两个 相邻 1 之间的 最长距离 。如果不存在两个相邻的 1，返回 0 。
